[ADD] new page for C & remove ruby [ADD] exercice with new link & [MODIF] button haskell [ADD] C button

--- a/templates/index.html
+++ b/templates/index.html
@@ -362,7 +362,7 @@
                 perfectionner vos compétences, nous avons tout ce qu'il vous faut.
             </p>
             <p>
-                Sélectionnez un langage pour commencer votre parcours de programmation : Python, JavaScript, Java, C++, PHP, Ruby, et bien plus encore. Vous pourrez accéder à des cours, des exemples de code, et des défis de codage au fur et à mesure de votre apprentissage.
+                Sélectionnez un langage pour commencer votre parcours de programmation : Python, JavaScript, Java, C++, PHP, C, et bien plus encore. Vous pourrez accéder à des cours, des exemples de code, et des défis de codage au fur et à mesure de votre apprentissage.
             </p>
         </div>
 
@@ -374,7 +374,7 @@
                 <button onclick="window.location.href='{% url 'java' %}'">Java</button>
                 <button onclick="window.location.href='{% url 'cpp' %}'">C++</button>
                 <button onclick="window.location.href='{% url 'php' %}'">PHP</button>
-                <button onclick="window.location.href='{% url 'ruby' %}'">Ruby</button>
+                <button onclick="window.location.href='{% url 'c' %}'">C</button>
                 <button onclick="window.location.href='{% url 'csharp' %}'">C#</button>
                 <button onclick="window.location.href='{% url 'haskell' %}'">Haskell</button>
             </div>
@@ -389,9 +389,6 @@
 
 </div>
 
- 
-
-   
     <script>
         // Fonction de recherche qui filtre les langages
         window.onscroll = function() {
