--- a/templates/createuser.html
+++ b/templates/createuser.html
@@ -102,14 +102,19 @@
     <p>Veuillez entrer vos informations pour créer un compte.</p>
 
     <div class="login-form">
-        <form method="post" action="{% url 'createuser' %}">
-            {% csrf_token %}
-            <input type="text" name="username" placeholder="Nom d'utilisateur" required>
-            <input type="email" name="email" placeholder="Email" required>
-            <input type="password" name="password1" placeholder="Mot de passe" required>
-            <input type="password" name="password2" placeholder="Confirmer le mot de passe" required>
-            <button type="submit">Créer un compte</button>
-        </form>
+     <form method="post" action="{% url 'createuser' %}">
+    {% csrf_token %}
+    <input type="text" name="username" placeholder="Nom d'utilisateur" required>
+    <input type="email" name="email" placeholder="Email" required>
+    <input type="password" name="password1" placeholder="Mot de passe" required>
+    <input type="password" name="password2" placeholder="Confirmer le mot de passe" required>
+    <select name="role" required>
+        <option value="student">Student</option>
+        <option value="teacher">Teacher</option>
+        <option value="admin">Admin</option>
+    </select>
+    <button type="submit">Créer un compte</button>
+</form>
     </div>
 
     <button class="back-button" onclick="goBack()">&#8592;</button>
