[ADD] python exercice [FIX] error file

--- a/templates/courses/haskell.html
+++ b/templates/courses/haskell.html
@@ -109,34 +109,34 @@
     height: 20vh;
 }
 .container {
-    display: flex; /* Utilise flexbox pour centrer et aligner */
+    display: flex;
 
-    align-items: center; /* Centre horizontalement */
+    align-items: center;
     margin: 50px auto;
-    max-width: 1000px; /* Ajuste la largeur selon tes besoins */
-    padding: 20px; /* Ajoute un peu de rembourrage interne */
-    border-radius: 20px; /* Coins légèrement arrondis */
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Ajoute une ombre subtile */
-    
+    max-width: 1000px;
+    padding: 20px;
+    border-radius: 20px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+
 }
 
 a {
-  display: inline-block; /* Permet de définir une largeur et une hauteur */
+  display: inline-block;
   margin: 10px;
-  padding: 10px 20px; /* Ajoute un peu de rembourrage */
-  color: #fff; /* Texte blanc */
-  background-color: #4CAF50; /* Couleur de fond verte */
+  padding: 10px 20px;
+  color: #fff;
+  background-color: #4CAF50;
   text-decoration: none;
   font-size: 16px;
-  border: none; /* Supprime la bordure par défaut */
-  border-radius: 5px; /* Coins arrondis */
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); /* Ajoute une ombre subtile */
-  transition: background-color 0.3s ease, box-shadow 0.3s ease; /* Transition pour l'effet de survol */
+  border: none;
+  border-radius: 5px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  transition: background-color 0.3s ease, box-shadow 0.3s ease;
 }
 
 a:hover {
-  background-color: #45a049; /* Couleur de fond plus foncée au survol */
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3); /* Ombre plus prononcée au survol */
+  background-color: #45a049;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
 }
 
     </style>
@@ -148,17 +148,14 @@ a:hover {
         <span>Clair</span>
         <span>Sombre</span>
     </div>
-<!-- Add a new container to wrap the video and buttons -->
 <div class="main-container">
-    <!-- Add a random video about Haskell above the buttons -->
+
     <div class="video-container">
         <iframe width="70%" height="400" src="https://www.youtube.com/embed/02_H3LjqMr8?si=cifUP4bDcuLpyHgG" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
 
-    <!-- Add the document PDF text above the buttons -->
     <h1>Documents PDF pour Haskell</h1>
 
-    <!-- Move the container div inside the main container -->
     <div class="container">
         <a href="https://drive.google.com/file/d/1BT5vbdYw7a2Qwj6-F68ey8eRHFqOQd72/view?usp=sharing" target="_blank">Cours Haskell</a>
         <a href="https://drive.google.com/file/d/1at6STm5W2vdu2DfloJeHcoDfykJWefBf/view?usp=sharing" target="_blank">Exercice Haskell</a>
