[ADD] PDF & page des langages informatique + videos opérationel

--- a/templates/courses/javascript.html
+++ b/templates/courses/javascript.html
@@ -135,8 +135,10 @@
         <h1>Documents PDF pour JavaScript</h1>
 
         <div class="container">
-            <a href="pdfs/javascript1.pdf" target="_blank">Cours JavaScript - Partie 1</a>
-            <a href="pdfs/javascript2.pdf" target="_blank">Cours JavaScript - Partie 2</a>
+            <a href="https://drive.google.com/file/d/1wrInq-P4fPpycBRby3Ue7iO2xqwHo71s/view?usp=sharing" target="_blank">Cours JavaScript</a>
+            <a href="https://drive.google.com/file/d/1cug5j23VT1J7C6PKtwZmWJ-qvgkFBtnO/view?usp=sharing" target="_blank">Exercice1</a>
+            <a href="https://drive.google.com/file/d/1qHqz4v0Y0uYVhWV3ZN49_nwaBwatz8hD/view?usp=sharing" target="_blank">Evaluation</a>
+
         </div>
     </div>
 
