--- a/templates/courses/php.html
+++ b/templates/courses/php.html
@@ -11,19 +11,55 @@
             background-color: #f4f4f4;
             color: #333;
             transition: background-color 0.3s ease, color 0.3s ease;
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
+
+        .main-container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            margin-top: 1px;
+            margin: 50px auto;
+            max-width: 700px;
+            padding: 20px;
+        }
+
+        .video-container {
+            margin-top: 100px;
+            margin-bottom: 200px;
+            width: 100vh;
+            height: 20vh;
+        }
+
         .container {
-            margin-top: 50px;
+            display: flex;
+            align-items: center;
+            margin: 50px auto;
+            max-width: 1000px;
+            padding: 20px;
+            border-radius: 20px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         }
+
         a {
-            display: block;
+            display: inline-block;
             margin: 10px;
-            color: #4CAF50;
+            padding: 10px 20px;
+            color: #fff;
+            background-color: #4CAF50;
             text-decoration: none;
-            font-size: 18px;
+            font-size: 16px;
+            border-radius: 5px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+            transition: background-color 0.3s ease, box-shadow 0.3s ease;
         }
+
         a:hover {
-            color: #45a049;
+            background-color: #45a049;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
         }
 
         .back-button {
@@ -91,10 +127,18 @@
         <span>Sombre</span>
     </div>
 
-    <div class="container">
+    <div class="main-container">
+        <div class="video-container">
+            <iframe width="70%" height="400" src="https://www.youtube.com/embed/OK_JCtrrv-c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
+
         <h1>Documents PDF pour PHP</h1>
-        <a href="pdfs/php1.pdf" target="_blank">Cours PHP - Partie 1</a>
-        <a href="pdfs/php2.pdf" target="_blank">Cours PHP - Partie 2</a>
+
+        <div class="container">
+            <a href="https://drive.google.com/file/d/19VZyz8ytoQXzmWXD7JV0H2Ya84h8ylSS/view?usp=sharing" target="_blank">Cours PHP</a>
+            <a href="https://drive.google.com/file/d/1yp0zclNe5oPTA0X6u5HNTwEImDTZfozW/view?usp=sharing" target="_blank">Exercice</a>
+            <a href="https://drive.google.com/file/d/1u32dK7AvFu2v5I7H12qnllOQmJlThDp8/view?usp=sharing" target="_blank">Evaluation</a>
+        </div>
     </div>
 
     <script>
@@ -128,6 +172,5 @@
             applyTheme(savedTheme);
         }
     </script>
-
 </body>
 </html>
