--- a/templates/courses/javascript.html
+++ b/templates/courses/javascript.html
@@ -128,7 +128,6 @@
     </div>
 
     <div class="main-container">
-        <!-- Add a random video about JavaScript above the buttons -->
         <div class="video-container">
             <iframe width="70%" height="400" src="https://www.youtube.com/embed/upDLs1sn7g4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
@@ -136,8 +135,10 @@
         <h1>Documents PDF pour JavaScript</h1>
 
         <div class="container">
-            <a href="pdfs/javascript1.pdf" target="_blank">Cours JavaScript - Partie 1</a>
-            <a href="pdfs/javascript2.pdf" target="_blank">Cours JavaScript - Partie 2</a>
+            <a href="https://drive.google.com/file/d/1wrInq-P4fPpycBRby3Ue7iO2xqwHo71s/view?usp=sharing" target="_blank">Cours JavaScript</a>
+            <a href="https://drive.google.com/file/d/1cug5j23VT1J7C6PKtwZmWJ-qvgkFBtnO/view?usp=sharing" target="_blank">Exercice1</a>
+            <a href="https://drive.google.com/file/d/1qHqz4v0Y0uYVhWV3ZN49_nwaBwatz8hD/view?usp=sharing" target="_blank">Evaluation</a>
+
         </div>
     </div>
 
